# roundtable-ai

./: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  conference.rs  connector.rs  lib.rs  main.rs  session_bridge.rs
