[package]
name = "roundtable-ai"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "roundtable_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["sync-secret-service", "crypto-openssl"] }
rusqlite = { version = "0.32", features = ["bundled"] }
openssl = { version = "0.10", features = ["v102", "v110"] }
open = "5"
url = "2"
